# QTCanRead

./: CMakeLists.txt  README.md  canbus.cpp  canbus.h  candevice.cpp  candevice.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
